# GigPilot

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
frontend/schema/: index.ts
frontend/src/api/: client.ts
frontend/src/schema/: index.ts
frontend/src/sync/: syncAdapter.ts
frontend/sync/: syncAdapter.ts
gigpilot-core/: Cargo.toml
gigpilot-core/migrations/: 20240101000001_create_users_table.sql  20240101000002_create_invoices_table.sql  20240101000003_create_sync_changes_table.sql  20240101000004_add_pgvector_extension.sql
gigpilot-core/src/: auth.rs  db.rs  lib.rs  main.rs
gigpilot-core/src/models/: invoice.rs  mod.rs  sync_change.rs  user.rs
gigpilot-core/src/rag/: embeddings.rs  mod.rs  search.rs
gigpilot-core/src/sync/: conflict.rs  handlers.rs  mod.rs  pull.rs  push.rs  tests.rs  types.rs
gigpilot-core/src/worker/: executor.rs  mod.rs  scheduler.rs  services.rs  state_machine.rs
