[package]
name = "gigpilot-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "migrate"] }

[dependencies]
# Workspace dependencies
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
chrono.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true

